--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
+.my-container{
+  @apply px-4  mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 
+}
 
 .active{
     @apply font-medium tracking-wide text-gray-50 transition-colors duration-200
