newsletter section added

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-
+@layer utilities {
+  .w-96 {
+    width: 540px;
+  }
+ .w-80 {
+  width: 384px;
+  }
+}
 
 .my-container{
   @apply px-4  mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 
